--- a/views/eripParser.jade
+++ b/views/eripParser.jade
@@ -4,3 +4,4 @@ extends layout
 
 block content
     p Выберите директорию для парсера
+    input(type='file' id='file_input' webkitdirectory directory)
